--- a/ga_sandbox/vs.net/libgasandbox.vcproj
+++ b/ga_sandbox/vs.net/libgasandbox.vcproj
@@ -140,6 +140,9 @@
 				RelativePath="..\libgasandbox\h3ga.cpp">
 			</File>
 			<File
+				RelativePath="..\libgasandbox\h3ga_util.cpp">
+			</File>
+			<File
 				RelativePath="..\libgasandbox\main.cpp">
 			</File>
 			<File
@@ -218,6 +221,9 @@
 			</File>
 			<File
 				RelativePath="..\libgasandbox\h3ga.h">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\h3ga_util.h">
 			</File>
 			<File
 				RelativePath="..\libgasandbox\mv_analyze.h">
