--- a/ga_sandbox/vs.net/chap11ex3.vcproj
+++ b/ga_sandbox/vs.net/chap11ex3.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="chap10ex3"
-	ProjectGUID="{B5F36C4C-5E7F-4442-B8B3-1A52C112C1C3}"
+	Name="chap11ex3"
+	ProjectGUID="{B5F36C4C-5E7F-4442-B8B3-1A52C212C1C6}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -13,14 +13,14 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
-			IntermediateDirectory="chap10ex3_Debug"
+			IntermediateDirectory="chap11ex3_Debug"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="5"
@@ -32,11 +32,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib antlrd.lib cxcore.lib"
-				OutputFile="$(OutDir)/chap10ex3.exe"
+				AdditionalDependencies="wsock32.lib"
+				OutputFile="$(OutDir)/chap11ex3.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/chap10ex3.pdb"
+				ProgramDatabaseFile="$(OutDir)/chap11ex3.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -63,13 +63,13 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
-			IntermediateDirectory="chap10ex3_Release"
+			IntermediateDirectory="chap11ex3_Release"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -79,8 +79,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib antlr.lib cxcore.lib"
-				OutputFile="$(OutDir)/chap10ex3.exe"
+				AdditionalDependencies="wsock32.lib"
+				OutputFile="$(OutDir)/chap11ex3.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
@@ -117,25 +117,13 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\chap10\ex3\chap10ex3.cpp">
-			</File>
-			<File
-				RelativePath="..\chap10\ex3\extcalibrefine.cpp">
-			</File>
-			<File
-				RelativePath="..\chap10\ex3\readcalibrationdata.cpp">
+				RelativePath="..\chap11\ex3\chap11ex3.cpp">
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File
-				RelativePath="..\chap10\ex3\extcalibrefine.h">
-			</File>
-			<File
-				RelativePath="..\chap10\ex3\readcalibrationdata.h">
-			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
