--- a/ga_sandbox/solutions/vs.net/Makefile.am
+++ b/ga_sandbox/solutions/vs.net/Makefile.am
@@ -4,6 +4,7 @@ EXTRA_DIST = \
 	chap3ex2s.vcproj \
 	chap6ex1s.vcproj \
 	chap6ex3s.vcproj \
-	chap7ex4s.vcproj
+	chap7ex4s.vcproj \
+	chap11ex4s.vcproj
 
 
