--- a/ga_sandbox/libgasandbox/Makefile.am
+++ b/ga_sandbox/libgasandbox/Makefile.am
@@ -12,6 +12,7 @@ libgasandbox_a_include_HEADERS = \
 	e2ga.h e2ga_draw.h e2ga_util.h \
 	e3ga.h e3ga_util.h e3ga_draw.h \
 	h3ga.h h3ga_util.h h3ga_draw.h \
+	c3ga.h c3ga_util.h c3ga_draw.h \
 	mv_analyze.h common.h     geosphere.h  mvtypebase.h \
 	timing.h glut_util.h gl_util.h gabits.h
 
@@ -20,6 +21,7 @@ libgasandbox_a_SOURCES =  \
 	e2ga.cpp e2ga_draw.cpp \
 	e3ga.cpp e3ga_util.cpp e3ga_draw.cpp \
 	h3ga.cpp h3ga_util.cpp h3ga_draw.cpp \
+	c3ga.cpp c3ga_util.cpp c3ga_draw.cpp \
 	geosphere.cpp timing.cpp \
 	glut_util.cpp gl_util.cpp 
 
@@ -30,12 +32,14 @@ libgasandboxparse_a_includedir       = $(includedir)/libgasandbox
 libgasandboxparse_a_include_HEADERS = \
 	e2ga_mv_lexer.hpp e2ga_mv_parser.hpp e2ga_mv_parserTokenTypes.hpp \
 	e3ga_mv_lexer.hpp e3ga_mv_parser.hpp e3ga_mv_parserTokenTypes.hpp \
-	h3ga_mv_lexer.hpp h3ga_mv_parser.hpp h3ga_mv_parserTokenTypes.hpp 
+	h3ga_mv_lexer.hpp h3ga_mv_parser.hpp h3ga_mv_parserTokenTypes.hpp \
+	c3ga_mv_lexer.hpp c3ga_mv_parser.hpp c3ga_mv_parserTokenTypes.hpp 
 
 libgasandboxparse_a_SOURCES =  \
 	e2ga_parse.cpp e2ga_mv_lexer.cpp e2ga_mv_parser.cpp \
 	e3ga_parse.cpp e3ga_mv_lexer.cpp e3ga_mv_parser.cpp \
-	h3ga_parse.cpp h3ga_mv_lexer.cpp h3ga_mv_parser.cpp 
+	h3ga_parse.cpp h3ga_mv_lexer.cpp h3ga_mv_parser.cpp \
+	c3ga_parse.cpp c3ga_mv_lexer.cpp c3ga_mv_parser.cpp 
 
 
 
@@ -45,4 +49,12 @@ EXTRA_DIST = \
 	e2ga_lexer.g e2ga_parser.g \
 	e3ga_lexer.g e3ga_parser.g \
 	h3ga_lexer.g h3ga_parser.g \
-	c3ga_draw.cpp main.cpp c3ga_draw.h 
+	c3ga_lexer.g c3ga_parser.g \
+	e2ga_mv_lexerTokenTypes.txt \
+	e2ga_mv_parserTokenTypes.txt \
+	e3ga_mv_lexerTokenTypes.txt \
+	e3ga_mv_parserTokenTypes.txt \
+	h3ga_mv_lexerTokenTypes.txt \
+	h3ga_mv_parserTokenTypes.txt \
+	c3ga_mv_lexerTokenTypes.txt \
+	c3ga_mv_parserTokenTypes.txt
