--- a/ga_sandbox/vs.net/libgasandbox.vcproj
+++ b/ga_sandbox/vs.net/libgasandbox.vcproj
@@ -98,6 +98,15 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath="..\libgasandbox\c3ga.cpp">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c3ga_draw.cpp">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c3ga_util.cpp">
+			</File>
+			<File
 				RelativePath="..\libgasandbox\draw.cpp">
 			</File>
 			<File
@@ -160,7 +169,13 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
 			<File
+				RelativePath="..\libgasandbox\c3ga.h">
+			</File>
+			<File
 				RelativePath="..\libgasandbox\c3ga_draw.h">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c3ga_util.h">
 			</File>
 			<File
 				RelativePath="..\libgasandbox\common.h">
