Fixed/added a lot of autoconf stuff

--- a/ga_sandbox/Makefile
+++ b/ga_sandbox/Makefile
@@ -155,7 +155,8 @@ sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = ${prefix}/etc
 target_alias = 
-SUBDIRS = libgasandbox chap2 chap3 chap4 chap5 chap6 chap7 solutions vs.net attic
+SUBDIRS = libgasandbox chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 chap10 chap11 chap12 solutions vs.net attic
+EXTRA_DIST = REQUIRED_LIBRARIES SOLARIS MACOSX
 all: all-recursive
 
 .SUFFIXES:
