--- a/ga_sandbox/configure.ac
+++ b/ga_sandbox/configure.ac
@@ -85,5 +85,7 @@ AC_OUTPUT(
 	solutions/vs.net/Makefile \
 	\
 	attic/Makefile\
-	attic/gaigen2hp/Makefile
+	attic/gaigen2hp/Makefile \
+	\
+	screenshots/Makefile
 	)
