--- a/ga_sandbox/configure.ac
+++ b/ga_sandbox/configure.ac
@@ -65,6 +65,9 @@ AC_OUTPUT(
 	chap12/Makefile \
 	\
 	chap13/Makefile \
+	chap13/ex1/Makefile \
+	chap13/ex2/Makefile \
+	chap13/ex3/Makefile \
 	\
 	chap14/Makefile \
 	\
