--- a/ga_sandbox/Makefile.in
+++ b/ga_sandbox/Makefile.in
@@ -155,7 +155,11 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = libgasandbox chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 chap10 chap11 chap12 solutions vs.net attic
+SUBDIRS = libgasandbox \
+	chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 \
+	chap10 chap11 chap12 chap13 chap14 chap15 chap16 \
+	solutions vs.net attic screenshots
+
 EXTRA_DIST = REQUIRED_LIBRARIES SOLARIS MACOSX
 all: all-recursive
 
