Added c2ga stuff, made qhull sample code

--- a/ga_sandbox/Makefile
+++ b/ga_sandbox/Makefile
@@ -155,7 +155,7 @@ sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = ${prefix}/etc
 target_alias = 
-SUBDIRS = libgasandbox \
+SUBDIRS = qhull-2003.1 libgasandbox \
 	chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 \
 	chap10 chap11 chap12 chap13 chap14 chap15 chap16 \
 	solutions vs.net attic screenshots
