--- a/ga_sandbox/Makefile.am
+++ b/ga_sandbox/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = libgasandbox \
+SUBDIRS = qhull-2003.1 libgasandbox \
 	chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 \
 	chap10 chap11 chap12 chap13 chap14 chap15 chap16 \
 	solutions vs.net attic screenshots
