--- a/ga_sandbox/vs.net/chap2ex3.vcproj
+++ b/ga_sandbox/vs.net/chap2ex3.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="opengl32.lib wsock32.lib"
+				AdditionalDependencies="opengl32.lib wsock32.lib glut32.lib opengl32.lib glu32.lib"
 				OutputFile="$(OutDir)/chap2ex3.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -79,7 +79,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="opengl32.lib wsock32.lib"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
 				OutputFile="$(OutDir)/chap2ex3.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
