--- a/ga_sandbox/vs.net/chap6ex2.vcproj
+++ b/ga_sandbox/vs.net/chap6ex2.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
 				OutputFile="$(OutDir)/chap6ex2.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -79,7 +79,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
 				OutputFile="$(OutDir)/chap6ex2.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
