--- a/ga_sandbox/vs.net/gaigen2hp.vcproj
+++ b/ga_sandbox/vs.net/gaigen2hp.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="opengl32.lib wsock32.lib fltkd.lib fltkgld.lib comctl32.lib"
+				AdditionalDependencies="opengl32.lib wsock32.lib fltkd.lib fltkgld.lib comctl32.lib glu32.lib"
 				OutputFile="$(OutDir)/gaigen2hp.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -79,7 +79,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="opengl32.lib wsock32.lib fltk.lib fltkgl.lib comctl32.lib"
+				AdditionalDependencies="opengl32.lib wsock32.lib fltk.lib fltkgl.lib comctl32.lib glu32.lib"
 				OutputFile="$(OutDir)/gaigen2hp.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
