--- a/ga_sandbox/vs.net/libgasandbox.vcproj
+++ b/ga_sandbox/vs.net/libgasandbox.vcproj
@@ -98,6 +98,18 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath="..\libgasandbox\c2ga.cpp">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2ga_draw.cpp">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2ga_util.cpp">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2gatoc3ga.cpp">
+			</File>
+			<File
 				RelativePath="..\libgasandbox\c3ga.cpp">
 			</File>
 			<File
@@ -168,6 +180,18 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath="..\libgasandbox\c2ga.h">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2ga_draw.h">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2ga_util.h">
+			</File>
+			<File
+				RelativePath="..\libgasandbox\c2gatoc3ga.h">
+			</File>
 			<File
 				RelativePath="..\libgasandbox\c3ga.h">
 			</File>
