--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -12,7 +12,7 @@ EXTRA_DIST = \
 	chap11ex1.vcproj chap11ex2.vcproj chap11ex3.vcproj chap11ex4.vcproj chap11ex5.vcproj chap11ex6.vcproj \
 	\
 	chap13ex1.vcproj chap13ex2.vcproj chap13ex3.vcproj chap13ex4.vcproj \
-	chap14ex1.vcproj chap14ex2.vcproj \
+	chap14ex1.vcproj chap14ex2.vcproj chap14ex3.vcproj chap14ex4.vcproj \
 	gaigen2hp.vcproj
 
 
