--- a/ga_sandbox/vs.net/chap16ex1.vcproj
+++ b/ga_sandbox/vs.net/chap16ex1.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="chap14ex4"
-	ProjectGUID="{B5F36C4C-5E7F-4442-B8B3-3C52D333B1C4}"
+	Name="chap16ex1"
+	ProjectGUID="{B5F36C4C-5E7F-4442-B8B3-3C52C636C1C4}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -13,7 +13,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
-			IntermediateDirectory="chap14ex4_Debug"
+			IntermediateDirectory="chap16ex1_Debug"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
@@ -32,11 +32,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib cxcored.lib"
-				OutputFile="$(OutDir)/chap14ex4.exe"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
+				OutputFile="$(OutDir)/chap16ex1.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/chap14ex4.pdb"
+				ProgramDatabaseFile="$(OutDir)/chap16ex1.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -63,7 +63,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
-			IntermediateDirectory="chap14ex4_Release"
+			IntermediateDirectory="chap16ex1_Release"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
@@ -79,8 +79,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib cxcore.lib"
-				OutputFile="$(OutDir)/chap14ex4.exe"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
+				OutputFile="$(OutDir)/chap16ex1.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
@@ -117,7 +117,7 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\chap14\ex4\chap14ex4.cpp">
+				RelativePath="..\chap16\ex1\chap16ex1.cpp">
 			</File>
 		</Filter>
 		<Filter
