--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -14,7 +14,7 @@ EXTRA_DIST = \
 	chap13ex1.vcproj chap13ex2.vcproj chap13ex3.vcproj chap13ex4.vcproj \
 	chap14ex1.vcproj chap14ex2.vcproj chap14ex3.vcproj chap14ex4.vcproj \
 	\
-	chap16ex1.vcproj \
+	chap16ex1.vcproj chap16ex2.vcproj chap16ex3.vcproj chap16ex4.vcproj \
 	gaigen2hp.vcproj
 
 
