--- a/ga_sandbox/solutions/vs.net/chap14ex2s.vcproj
+++ b/ga_sandbox/solutions/vs.net/chap14ex2s.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="chap14ex2"
+	Name="chap14ex2s"
 	ProjectGUID="{B5F36C4C-5E7F-4442-B8B3-3C52D322C1C4}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -13,13 +13,13 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
-			IntermediateDirectory="chap14ex2_Debug"
+			IntermediateDirectory="chap14ex2s_Debug"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\"
+				AdditionalIncludeDirectories="..\..\"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -33,10 +33,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
-				OutputFile="$(OutDir)/chap14ex2.exe"
+				OutputFile="$(OutDir)/chap14ex2s.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/chap14ex2.pdb"
+				ProgramDatabaseFile="$(OutDir)/chap14ex2s.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -63,12 +63,12 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
-			IntermediateDirectory="chap14ex2_Release"
+			IntermediateDirectory="chap14ex2s_Release"
 			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\"
+				AdditionalIncludeDirectories="..\..\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
@@ -80,7 +80,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
-				OutputFile="$(OutDir)/chap14ex2.exe"
+				OutputFile="$(OutDir)/chap14ex2s.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
@@ -117,7 +117,7 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\chap14\ex2\chap14ex2.cpp">
+				RelativePath="..\chap14\ex2\chap14ex2s.cpp">
 			</File>
 		</Filter>
 		<Filter
